# oh_so_smart

./: .dockerignore  .editorconfig  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile.alpine  Dockerfile.debian  LICENSE  README.md  pylintrc  pyproject.toml  requirements.txt  requirements_dev.txt  requirements_psr.txt
.github/workflows/: ci.yml
docs/fedora-iot/: README.md  config.bu
docs/psr-templates/: .gitignore  .release_notes.md.j2  CHANGELOG.md.j2
oh_so_smart/: __main__.py  cmdline_parser.py  main.py  restarter.py
oh_so_smart/algo/: error.py  linear_regression.py  signal_monitor.py  sleeper.py
oh_so_smart/config/: gpio.py  rpi_pin_map.py  schema.py
oh_so_smart/mqtt/: ha_naming.py  manager.py  msg.py  queue.py
oh_so_smart/products/: factory.py  gpio.py
oh_so_smart/products/dual_fuel_thermostat/: dual_fuel_switches.py  factory.py
oh_so_smart/products/smart_socket/: factory.py
oh_so_smart/products/smart_thermostat/: factory.py
oh_so_smart/sensors/: error.py  filters.py  manager.py  sensors.py
oh_so_smart/switches/: manager.py  switches.py
oh_so_smart/test/algo/: test_linear_regression.py
oh_so_smart/test/sensors/: test_filters.py
sample_config/: dual_fuel_thermostat.toml  smart_socket.toml  smart_thermostat.toml
scripts/: common.py  config.py  docker.py  docker.sh  lint.py  manage-packages.mjs  pip_install.py  poll-w1-thermometers.sh  release.py  upload.py
scripts/manage-packages/: .prettierrc  eslint.config.js  package.json  pnpm-lock.yaml  tsconfig.json
scripts/manage-packages/src/: cmd_parser.ts  docker.ts  got_wrappers.ts  (+4 more)
